--- a/app/views/users/ngo.html.erb
+++ b/app/views/users/ngo.html.erb
@@ -21,11 +21,7 @@
 		 
   
 	}
-	#login .modal-dialog
-	{
-		width: 30%;
-		height: auto;
-	}
+	
 	body
 	{
 		background-image: url(<%=image_path("back.jpg")%>);
@@ -93,11 +89,17 @@
 		</li>
 		<li><a  href="#">SPONSORS</a></li>
 		<li><a  href="#">CONTACT&nbsp&nbsp&nbsp&nbsp</a></li>
-		<li class="btn-group" id="loginsign">
+		<!-- only for logged in peeps -->
+
+		<% if logged_in? %>
+		<li style="color:white;"><a href="" class="navbar-brand"> welcome <%= current_user.name %></a></li>
+		<% else %> 
+				<li class="btn-group" id="loginsign">
 		
 		<button class= "btn btn-danger" data-toggle="modal" data-target="#login">LOGIN</button>
 		<button class="btn btn-danger" data-toggle="modal" data-target="#signup">SIGN UP</button>
 		</li>
+		<% end %>
 	</ul>
 	</div>
 	</nav>
@@ -132,20 +134,24 @@ LOGIN
 </div>
 <div class="modal-body"></div>
 
-<form>
-	<div style="text-align: center;">
-	<input type="password" name="pass" placeholder="username"style="text-align: center;">  </input>
+<h1 style="text-align:center;">Log in</h1>
 
-	<BR>
-	<br>
-	<input type="password" name="pass" placeholder="password" style="text-align: center;">  </input>
-	</div>
-	<input type="checkbox">Remember me</input>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <%= form_for(:session, url: login_path) do |f| %>
 
+      <%= f.label :email %>
+      <%= f.email_field :email, class: 'form-control' %>
 
+      <%= f.label :password %>
+      <%= f.password_field :password, class: 'form-control' %>
+      <br>
+      <div style="text-align:center" ><%= f.submit "Log in", class: "btn btn-primary" %></div>
+    <% end %>
 
-
-</form>
+    <p>New user? <%= link_to "Sign up now!", 'users#new' %></p>
+  </div>
+</div>
 
 <div class="modal-footer">
 	<button class="btn btn-danger" data-dismiss="modal">CLOSE</button>
@@ -168,22 +174,22 @@ LOGIN
 SIGN UP
 </div>
 <div class="modal-body">
-	<div class="row">
+<h1 style="text-align:center;">Sign Up </h1>
+<div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(@user) do |f| %>
-      <%= f.label :name %>
-      <%= f.text_field :name %>
-      <br>
+    <%= f.label :name %>
+    <%= f.text_field :name ,class: 'form-control' %>
       <%= f.label :email %>
-      <%= f.email_field :email %>
-      <br>
+      <%= f.email_field :email, class: 'form-control' %>
+
       <%= f.label :password %>
-      <%= f.password_field :password %>
-
-     
-
-      <%= f.submit "Create my account", class: "btn btn-primary" %>
+      <%= f.password_field :password, class: 'form-control' %>
+      <br>
+      <div style="text-align:center;"> <%= f.submit "Create my account", class: "btn btn-primary" %> </div>
     <% end %>
+
+    
   </div>
 </div>
 </div>
